# twitterClone

./: README.md  db.sqlite3  pyproject.toml
templates/: generic_form.html  index.html  login.html  navbar.html
tweet/: forms.py  models.py  views.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  forms.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py
